--- a/restaurant/src/main/resources/templates/admin.html
+++ b/restaurant/src/main/resources/templates/admin.html
@@ -19,7 +19,7 @@
         <div class="layui-header">
             <ul class="layui-nav layui-layout-left">
                 <li class="layui-nav-item layadmin-flexible" lay-unselect>
-                    <a href="javascript:;" layadmin-event="flexible" title="侧边伸缩">
+                    <a href="javascript:;" layadmin-event="flexible" title="Side extension">
                         <i class="layui-icon layui-icon-shrink-right" id="LAY_app_flexible"></i>
                     </a>
                 </li>
@@ -75,7 +75,7 @@
                 <ul class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu"
                     lay-filter="layadmin-system-side-menu">
                     <li data-name="home" class="layui-nav-item layui-nav-itemed">
-                        <a href="javascript:;" lay-tips="主页" lay-direction="2">
+                        <a href="javascript:;" lay-tips="Main page" lay-direction="2">
                             <i class="layui-icon layui-icon-home"></i>
                             <cite>Main page</cite>
                         </a>
