--- a/restaurant/src/main/resources/templates/goodscategory/list.html
+++ b/restaurant/src/main/resources/templates/goodscategory/list.html
@@ -58,9 +58,9 @@
                 , toolbar: '#test-table-toolbar-toolbarDemo' //开启工具栏，此处显示默认图标，可以自定义模板，详见文档
                 , cols: [[ //表头
                     {type: 'checkbox', fixed: 'left'}
-                    , {field: 'categoryId', title: 'ID',align:'center', cellMinWidth: 80, sort: true, fixed: 'left', totalRowText: '合计：'}
-                    , {field: 'categoryName', title: '类型名',align:'center', cellMinWidth: 150}
-                    , {fixed: 'right', title: "工具栏",align:'center', width: 180, toolbar: '#barDemo'}
+                    , {field: 'categoryId', title: 'ID',align:'center', cellMinWidth: 80, sort: true, fixed: 'left', totalRowText: 'Total: '}
+                    , {field: 'categoryName', title: 'Category Name',align:'center', cellMinWidth: 150}
+                    , {fixed: 'right', title: "Tool Bar",align:'center', width: 180, toolbar: '#barDemo'}
                 ]]
             });
 
