--- a/restaurant/src/main/resources/templates/home/console.html
+++ b/restaurant/src/main/resources/templates/home/console.html
@@ -58,12 +58,12 @@
             </div>
             <div class="layui-card">
                 <div class="layui-card-header">
-                    作者心语
-                    <i class="layui-icon layui-icon-tips" lay-tips="泸职院哦！" lay-offset="5"></i>
+                    Louis Restaurant
+                    <i class="layui-icon layui-icon-tips" lay-tips="A Easter Egg" lay-offset="5"></i>
                 </div>
                 <div class="layui-card-body layui-text" style="height: 40px">
-                    <p>Hello world！</p>
-                    <p>—— 刘静</p>
+                    <p>The best Restaurant in Hong Kong! Maybe</p>
+                    <p>—— PKPD</p>
                 </div>
             </div>
         </div>
