--- a/restaurant/src/main/resources/templates/member/edit.html
+++ b/restaurant/src/main/resources/templates/member/edit.html
@@ -75,7 +75,7 @@
                                 </th:block>
                                 <th:block th:if="${member.gender} eq 'Female'">
                                     <input type="radio" name="gender" value="Male" title="Male">
-                                    <input type="radio" name="gender" value="Female" title="女=Female" checked>
+                                    <input type="radio" name="gender" value="Female" title="Female" checked>
                                 </th:block>
                             </div>
                         </div>
