--- a/restaurant/src/main/resources/templates/member/list.html
+++ b/restaurant/src/main/resources/templates/member/list.html
@@ -40,8 +40,8 @@
                         <div class="layui-input-block" style="margin-left:50px;">
                             <select name="gender">
                                 <option value="">No limit</option>
-                                <option value="男">Male</option>
-                                <option value="女">Female</option>
+                                <option value="Male">Male</option>
+                                <option value="Female">Female</option>
                             </select>
                         </div>
                     </div>
