--- a/restaurant/src/main/resources/templates/membercategory/list.html
+++ b/restaurant/src/main/resources/templates/membercategory/list.html
@@ -61,7 +61,7 @@
                     , {field: 'mcId', title: 'ID',align:'center', cellMinWidth: 80, sort: true, fixed: 'left',hide:true}
                     , {field: 'mcName', title: 'Type name',align:'center', cellMinWidth: 150}
                     , {field: 'discount', title: 'Discount',align:'center', cellMinWidth: 80, sort: true}
-                    , {field: 'amount', title: 'Consumption Amount Conditions',align:'center',templet: '<div>{{d.amount}}<span>元</span></div>', cellMinWidth: 60, sort: true}
+                    , {field: 'amount', title: 'Consumption Amount Conditions',align:'center',templet: '<div> ${{d.amount}}<span></span></div>', cellMinWidth: 60, sort: true}
                     , {field: 'createTime', title: 'Create time', cellMinWidth: 150,sort: true}
                     , {field: 'modifyTime', title: 'Edit time', cellMinWidth: 150,sort: true}
                     , {fixed: 'right', title: "Toolbar",align:'center', width: 180, toolbar: '#barDemo'}
