--- a/restaurant/src/main/resources/templates/user/addUser.html
+++ b/restaurant/src/main/resources/templates/user/addUser.html
@@ -20,14 +20,14 @@
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
                         <label class="layui-form-label">Account</label>
                         <div class="layui-input-block">
-                            <input type="text" name="loginCode" lay-verify="required|phone" placeholder="电话号作账号"
+                            <input type="text" name="loginCode" lay-verify="required|phone" placeholder="Phone no. will be the account name"
                                    autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
                         <label class="layui-form-label">Password</label>
                         <div class="layui-input-block">
-                            <input type="text" name="password" placeholder="初始密码123456" autocomplete="off"
+                            <input type="text" name="password" placeholder="Initial password: 123456" autocomplete="off"
                                    class="layui-input" disabled>
                         </div>
                     </div>
