--- a/restaurant/src/main/resources/templates/goods/list.html
+++ b/restaurant/src/main/resources/templates/goods/list.html
@@ -29,9 +29,9 @@
                         <label class="layui-form-label" style="width:60px;;padding: 9px 0px">Listing Status</label>
                         <div class="layui-input-block" style="margin-left:70px;">
                             <select name="putawayStatus">
-                                <option value="">不限 N/A</option>
-                                <option value="1">上架 Put on sale</option>
-                                <option value="0">下架 Remove on sale</option>
+                                <option value="">N/A</option>
+                                <option value="1">Put on sale</option>
+                                <option value="0">Remove on sale</option>
                             </select>
                         </div>
                     </div>
@@ -41,9 +41,9 @@
                         <label class="layui-form-label" style="width:60px;;padding: 9px 0px">Selling Status</label>
                         <div class="layui-input-block" style="margin-left:70px;">
                             <select name="soldState">
-                                <option value="">不限 N/A</option>
-                                <option value="0">未售完 Available</option>
-                                <option value="1">已售完 Sold Out</option>
+                                <option value="">N/A</option>
+                                <option value="0">Available</option>
+                                <option value="1">Sold Out</option>
                             </select>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                         <label class="layui-form-label" style="width:60px;;padding: 9px 0px">Type</label>
                         <div class="layui-input-block" style="margin-left:70px;">
                             <select name="categoryId">
-                                <option value="">不限  N/A</option>
+                                <option value="">N/A</option>
                                 <th:block th:each="goodsCategory:${goodsCategoryList}">
                                     <option th:value="${goodsCategory.categoryId}" th:text="${goodsCategory.categoryName}"></option>
                                 </th:block>
@@ -93,23 +93,23 @@
             <table id="tableList" lay-filter="tableList"></table>
             <!--右边工具栏-->
             <script th:inline="javascript" type="text/html" id="barDemo">
-                <a class="layui-btn layui-btn-xs" lay-event="edit">编辑 Edit</a>
+                <a class="layui-btn layui-btn-xs" lay-event="edit">Edit</a>
                 <!--在该语法中通过模板Thymeleaf模板引擎获取中文会被转换成编码-->
                 {{#
                 if( [[${role.roleId}]]==1)
                 { }}
-                <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除 Delete</a>
+                <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">Delete</a>
                 {{#  } else { }}
-                <a class="layui-btn layui-btn-disabled layui-btn-xs">删除 Delete</a>
+                <a class="layui-btn layui-btn-disabled layui-btn-xs">Delete</a>
                 {{#  } }}
             </script>
             <script th:inline="javascript" type="text/html" id="putawayStatus">
                 {{#
                 if(d.putawayStatus==0)
                 { }}
-                <button class="layui-btn layui-btn-primary layui-btn-sm">下架 Remove on sale</button>
+                <button class="layui-btn layui-btn-primary layui-btn-sm">Remove on sale</button>
                 {{#  } else { }}
-                <button class="layui-btn layui-btn-sm">上架 Put on sale</button>
+                <button class="layui-btn layui-btn-sm">Put on sale</button>
                 {{#  } }}
             </script>
 
@@ -117,24 +117,24 @@
                 {{#
                 if( d.soldState==0)
                 { }}
-                <button class="layui-btn  layui-btn-primary layui-btn-sm">未售完 Available</button>
+                <button class="layui-btn  layui-btn-primary layui-btn-sm">Available</button>
                 {{#  } else { }}
-                <button class="layui-btn layui-btn-danger layui-btn-sm">已售完 Sold Out</button>
+                <button class="layui-btn layui-btn-danger layui-btn-sm">Sold Out</button>
                 {{#  } }}
             </script>
             <script th:inline="javascript" type="text/html" id="typeState">
                 {{#
                     if( d.typeState==1){
                 }}
-                <b style="color: #2F4056;">普通菜 Main Dishes</b>
+                <b style="color: #2F4056;">Main Dishes</b>
                 {{#
                     } else if(d.typeState==2){
                 }}
-                <b style="color: #FFB800;">新菜 Salad</b>
+                <b style="color: #FFB800;">Salad</b>
                 {{#
                     }else if(d.typeState==3){
                 }}
-                <b style="color: #FF5722;">特色菜 Dessert</b>
+                <b style="color: #FF5722;">Dessert</b>
                 {{#
                     }
                 }}
@@ -144,7 +144,7 @@
                 {{#
                 if( d.imgUrl==null||d.imgUrl=='')
                 { }}
-                <div style="color:red">无图片 N/A</div>
+                <div style="color:red">N/A</div>
                 {{#  } else { }}
                 <img src="/restaurant{{d.imgUrl}}" class="laytable-cell-1-imgUrl">
                 {{#  } }}
@@ -178,7 +178,7 @@
                 ,height:540
                 , limits: [7,10, 20, 30,40]
                 ,limit:7
-                , title: '菜品列表'
+                , title: 'Food List'
                 , page: true //开启分页
                 , even: true//开启背景隔行
                 ,size:"lg"//设置表格尺寸
@@ -186,19 +186,19 @@
                 , cols: [[ //表头
                     {type: 'checkbox', fixed: 'left'}
                     , {field: 'goodsId', title: 'ID',align:'center', width: 60, sort: true, fixed: 'left',hide:true}
-                    , {field: 'goodsName', title: '菜品名 Food Name', width: 150, sort: true}
-                    , {field: 'goodsCategory', title: '菜品类型 Type', align:'center',width: 100, templet: '<div>{{d.goodsCategory.categoryName}}</div>'}
-                    , {field: 'imgUrl', title: '菜品图片 Photo',align:'center', width:120, templet:'#imgUrl'}
-                    , {field: 'description', title: '菜品描述 Description', width: 100, sort: true, totalRow: true}
-                    , {field: 'cost', title: '成本 Cost',align:'center', width: 100,sort:true,templet:'<div>{{d.cost}}元</div>'}
-                    , {field: 'price', title: '价格 Prices',align:'center', width: 100,sort: true,templet:'<div>{{d.price}}元</div>'}
-                    , {field: 'storeCount', title: '库存量 Inventory',align:'center',width: 100,sort: true,templet:'<div>{{d.storeCount}}份</div>'}
-                    , {field: 'putawayStatus', title: '上架状态 Listing Status',align:'center',templet: '#putawayStatus',width: 100}
-                    , {field: 'soldState', title: '销售状态 Selling Status',align:'center',templet: '#soldState',width: 100}
-                    , {field:  'typeState',title: '销售类型 Selling Type',align:'center',templet: '#typeState',width: 100}
-                    , {field: 'createTime', title: '创建时间 Creating Date ', width: 170,sort: true}
-                    , {field: 'modifyTime', title: '修改时间 Editing Date', width: 170,sort: true}
-                    , {fixed: 'right', title: "工具栏 Toolbar",align:'center', width: 180, toolbar: '#barDemo'}
+                    , {field: 'goodsName', title: 'Food Name', width: 150, sort: true}
+                    , {field: 'goodsCategory', title: 'Type', align:'center',width: 100, templet: '<div>{{d.goodsCategory.categoryName}}</div>'}
+                    , {field: 'imgUrl', title: 'Photo',align:'center', width:120, templet:'#imgUrl'}
+                    , {field: 'description', title: 'Description', width: 100, sort: true, totalRow: true}
+                    , {field: 'cost', title: 'Cost',align:'center', width: 100,sort:true,templet:'<div> ${{d.cost}}</div>'}
+                    , {field: 'price', title: 'Prices',align:'center', width: 100,sort: true,templet:'<div> ${{d.price}}</div>'}
+                    , {field: 'storeCount', title: 'Inventory',align:'center',width: 100,sort: true,templet:'<div> {{d.storeCount}}</div>'}
+                    , {field: 'putawayStatus', title: 'Listing Status',align:'center',templet: '#putawayStatus',width: 100}
+                    , {field: 'soldState', title: 'Selling Status',align:'center',templet: '#soldState',width: 100}
+                    , {field:  'typeState',title: 'Selling Type',align:'center',templet: '#typeState',width: 100}
+                    , {field: 'createTime', title: 'Creating Date ', width: 170,sort: true}
+                    , {field: 'modifyTime', title: 'Editing Date', width: 170,sort: true}
+                    , {fixed: 'right', title: "Toolbar",align:'center', width: 180, toolbar: '#barDemo'}
                 ]]
             });
 
@@ -210,7 +210,7 @@
                     case 'add':
                         layer.open({
                             type: 2
-                            ,title: '添加菜品'
+                            ,title: 'Add Food'
                             ,content: '/restaurant/goods/add.html'
                             ,maxmin: true
                             ,area: ['800px', '565px']
@@ -241,7 +241,7 @@
                                             }
                                         },
                                         error: function (result, type) {
-                                            layer.msg('添加失败！', {icon: 2, time: 1000});
+                                            layer.msg('Add failed!', {icon: 2, time: 1000});
                                         }
                                     });
                                 });
@@ -251,15 +251,15 @@
                         break;
                     case 'update':
                         if (data.length === 0) {
-                            layer.msg('请选择一行');
+                            layer.msg('Please select one row');
                         } else if (data.length > 1) {
-                            layer.msg('只能同时编辑一个');
+                            layer.msg('Only can edit one row');
                         } else {
                             var goodsId = checkStatus.data[0].goodsId;
                             var url = '/restaurant/goods/edit.html/'+goodsId;
                             layer.open({
                                 type: 2
-                                ,title: '编辑菜品'
+                                ,title: 'Edit Food'
                                 ,content:url
                                 ,maxmin: true
                                 ,area: ['800px', '565px']
@@ -298,7 +298,7 @@
                         break;
                     case 'delete':
                         if (data.length === 0) {
-                            layer.msg('请选择一行');
+                            layer.msg('Please select one row');
                         } else {
                             layer.confirm('Confirm deleting?', function(){
                                 var ids = '';
@@ -322,7 +322,7 @@
                                         }
                                     },
                                     error: function (result, type) {
-                                        layer.msg('删除失败！', {icon: 2, time: 1000});
+                                        layer.msg('Delete failed!', {icon: 2, time: 1000});
                                     }
                                 });
                             });
@@ -336,7 +336,7 @@
                 var data = obj.data //获得当前行数据
                     , layEvent = obj.event; //获得 lay-event 对应的值
                 if (layEvent === 'del') {
-                    layer.confirm('Confirm deleting【'+data.goodsName+'】?', function (index) {
+                    layer.confirm('Confirm deleting ['+data.goodsName+']?', function (index) {
                         $.ajax({
                             url: "/restaurant/goods/del.do",
                             type: "post",
@@ -361,7 +361,7 @@
                     var url = '/restaurant/goods/edit.html/'+data.goodsId;
                     layer.open({
                         type: 2
-                        ,title: '编辑菜品'
+                        ,title: 'Edit Food'
                         ,content:url
                         ,maxmin: true
                         ,area: ['800px', '565px']
