--- a/restaurant/src/main/resources/templates/user/EditUser.html
+++ b/restaurant/src/main/resources/templates/user/EditUser.html
@@ -30,11 +30,11 @@
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
                         <label class="layui-form-label">Sex</label>
                         <div class="layui-input-block">
-                            <th:block th:if="${user.gender}=='男'">
+                            <th:block th:if="${user.gender}=='Male'">
                                 <input type="radio" name="gender" value="Male" title="Male" checked>
                                 <input type="radio" name="gender" value="Female" title="Female">
                             </th:block>
-                            <th:block th:if="${user.gender}=='女'">
+                            <th:block th:if="${user.gender}=='Female'">
                                 <input type="radio" name="gender" value="Male" title="Male">
                                 <input type="radio" name="gender" value="Female" title="Female" checked>
                             </th:block>
