--- a/restaurant/src/main/resources/templates/user/userList.html
+++ b/restaurant/src/main/resources/templates/user/userList.html
@@ -233,7 +233,10 @@
                         if (data.length === 0) {
                             layer.msg('Please select a row');
                         } else {
-                            layer.confirm('Confirm delete?', function (){
+                            layer.confirm('Confirm delete?', {
+                                title: 'Message',
+                                btn: ['Confirm', 'Cancel']
+                            }, function (){
                                 var ids = '';
                                 for (var i = 0; i < data.length; i++) {
                                     ids += data[i].userId + ",";
