--- a/restaurant/src/main/resources/templates/cook/servingTaskList.html
+++ b/restaurant/src/main/resources/templates/cook/servingTaskList.html
@@ -100,9 +100,9 @@
                     title: 'Desk Code',
                     align: 'center',
                     cellMinWidth: 150,
-                    templet: '<div><span style="color:#FF5722 ">{{d.order.deskCode}}号</span></div>'
+                    templet: '<div><span style="color:#FF5722 "> No.{{d.order.deskCode}}</span></div>'
                 }
-                , {field: 'imgUrl', title: '菜品图片', align: 'center', cellMinWidth: 120, templet: '#imgUrl'}
+                , {field: 'imgUrl', title: 'Food Picture', align: 'center', cellMinWidth: 120, templet: '#imgUrl'}
                 , {
                     field: 'goodsName',
                     title: 'Food Name',
