--- a/restaurant/src/main/resources/templates/sold/transactionRecordsList.html
+++ b/restaurant/src/main/resources/templates/sold/transactionRecordsList.html
@@ -20,7 +20,7 @@
     <div class="layui-form layui-card-header layuiadmin-card-header-auto">
         <div class="layui-form-item">
             <div class="layui-inline">
-                <label class="layui-form-label">Query conditions</label>
+                <label class="layui-form-label">Filter</label>
                 <div class="layui-input-inline" style="width:100px;">
                     <input type="text" name="deskCode" id="deskCode" placeholder="Table number" autocomplete="off"
                            class="layui-input">
