--- a/restaurant/src/main/resources/templates/user/userList.html
+++ b/restaurant/src/main/resources/templates/user/userList.html
@@ -19,7 +19,7 @@
         <div class="layui-form layui-card-header layuiadmin-card-header-auto">
             <div class="layui-form-item">
                 <div class="layui-inline">
-                    <label class="layui-form-label">Query conditions</label>
+                    <label class="layui-form-label">Filter</label>
                     <div class="layui-input-inline" style="width:100px;">
                         <input type="text" name="loginCode" id="loginCode" placeholder="Account" autocomplete="off" class="layui-input">
                     </div>
