--- a/restaurant/src/main/resources/templates/order/list.html
+++ b/restaurant/src/main/resources/templates/order/list.html
@@ -129,7 +129,7 @@
             {{#
             }else{
             }}
-            <div style="color:#5FB878;">Paid/div>
+            <div style="color:#5FB878;">Paid</div>
             {{#
             }
             }}
