--- a/restaurant/src/main/resources/templates/client/goodsPage.html
+++ b/restaurant/src/main/resources/templates/client/goodsPage.html
@@ -147,7 +147,7 @@
                             '<li class="goodName">' + info["goodsName"] + '</li>' +
                             '<li style="color: #AF2825"><b style="float: left">￥</b>' +
                             '<span style="float: left" class="price">' + info["price"] + '</span>' +
-                            '<b style="margin-left: 10px" class="store">Total </b><span class="storeCount store" style="float: left">' + info["storeCount"] + '</span><b class="store"> dishes</b>' +
+                            '<b style="margin-left: 10px" class="store">Total:&nbsp</b><span class="storeCount store" style="float: left">' + info["storeCount"] + '</span><b class="store">&nbspdishes</b>' +
                             '<button class="layui-btn layui-btn-primary chickClick" style="display:inline-block;float:right;width:60px;font-size:12px;padding:0px 4px;color:#AF2825;height:28px;line-height:28px;text-align:center;border-radius:25px;border: 1px solid #AF2825;">Select</button>' +
                             '</li>' +
                             '</ul>' +
