fixed the bug about pictures cannot be shown

--- a/restaurant/src/main/resources/templates/chart/salesStatistics.html
+++ b/restaurant/src/main/resources/templates/chart/salesStatistics.html
@@ -57,7 +57,7 @@
                         <div class="layui-col-md2" style="height:120px"><span>number of order</span></div>
                         <div class="layui-col-md8"
                              style="height:120px;font-size: 26px;line-height:120px;color: #01AAED;text-align: center">
-                            <span id="totalOrder"></span><span>no. of order</span></div>
+                            <span id="totalOrder"></span><span>&nbsp;orders</span></div>
                         <div class="layui-col-md2" style="height:120px;text-align: right"><span class="day">TODAY</span>
                         </div>
                     </div>
