--- a/restaurant/src/main/resources/templates/counter/counter.html
+++ b/restaurant/src/main/resources/templates/counter/counter.html
@@ -466,7 +466,7 @@
                                               id="truly-pay" value="">
                 </div>
                 <div class="money-item" style="font-size: 18px;">
-                    <span>Change：￥</span><span id="change-money">0.00</span>
+                    <span>Change: $</span><span id="change-money">0.00</span>
                 </div>
             </div>
             <div class="counter-item3-right float-left">
