--- a/restaurant/src/main/resources/templates/chart/salesStatistics.html
+++ b/restaurant/src/main/resources/templates/chart/salesStatistics.html
@@ -29,7 +29,7 @@
                         <div class="layui-col-md2" style="height:120px"><span>Total Turnover</span></div>
                         <div class="layui-col-md8"
                              style="height:120px;font-size: 26px;line-height:120px;color: #FF5722;text-align: center">
-                            <span id="mustPay"></span><span>$</span></div>
+                            <span>$</span><span id="mustPay"></span></div>
                         <div class="layui-col-md2" style="height:120px;text-align: right"><span class="day">TODAY</span>
                         </div>
                     </div>
@@ -43,7 +43,7 @@
                         <div class="layui-col-md2" style="height:120px"><span>Total Profit</span></div>
                         <div class="layui-col-md8"
                              style="height:120px;font-size: 26px;line-height:120px;color: #FFB800;text-align: center">
-                            <span id="totalProfit"></span><span>$</span></div>
+                            <span>$</span><span id="totalProfit"></span></div>
                         <div class="layui-col-md2" style="height:120px;text-align: right"><span class="day">TODAY</span>
                         </div>
                     </div>
@@ -54,7 +54,7 @@
             <div class="layui-card height100">
                 <div class="layui-card-body">
                     <div class="layui-row">
-                        <div class="layui-col-md2" style="height:120px"><span>number of order</span></div>
+                        <div class="layui-col-md2" style="height:120px"><span>Order amount</span></div>
                         <div class="layui-col-md8"
                              style="height:120px;font-size: 26px;line-height:120px;color: #01AAED;text-align: center">
                             <span id="totalOrder"></span><span>&nbsp;orders</span></div>
