--- a/restaurant/src/main/resources/templates/member/add.html
+++ b/restaurant/src/main/resources/templates/member/add.html
@@ -20,7 +20,7 @@
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
                         <label class="layui-form-label">Member number</label>
                         <div class="layui-input-block">
-                            <input type="text" name="memberCode" lay-verify="required|phone" placeholder="电话号作会员号"
+                            <input type="text" name="memberCode" lay-verify="required|phone" placeholder="Phone number is member ID"
                                    autocomplete="off" class="layui-input">
                         </div>
                     </div>
