--- a/restaurant/src/main/resources/templates/counter/counter.html
+++ b/restaurant/src/main/resources/templates/counter/counter.html
@@ -569,7 +569,7 @@
                 return;
             }
             //验证手机号
-            if (!/^[1][3,4,5,7,8][0-9]{9}$/.test(memberCode)) {
+            if (!/^\d{8}$/.test(memberCode)) {
                 $("#memberCode").val("");
                 layer.msg("Incorrect Member Number Format!", {icon: 5});
                 return;
@@ -684,7 +684,7 @@
         function loadMemberInfo(data) {
             $(".member-name").text(data.name);
             $(".member-category").text(data.memberCategory.mcName);
-            $(".discount").text(parseFloat(data.memberCategory.discount) * 10 + "折");
+            $(".discount").text(parseFloat(1-(data.memberCategory.discount) * 10) + "% off");
             //消费金额
             var totalMoney = parseFloat($(".totalMoney").text());
             var discountMoney = (totalMoney * (1 - data.memberCategory.discount)).toFixed(2);
