--- a/restaurant/src/main/resources/templates/login/login.html
+++ b/restaurant/src/main/resources/templates/login/login.html
@@ -16,7 +16,7 @@
 			</div>
 			<div class="login layui-anim layui-anim-up">
 				<fieldset class="layui-elem-field layui-field-title">
-					<legend class="text-white">Restaurant order system</legend>
+					<legend class="text-white" style="margin:0">Restaurant POS System</legend>
 				</fieldset>
 				<div class="layui-form" action="" method="post">
 					<div class="layui-form-item">
