--- a/restaurant/src/main/resources/templates/cook/servingTaskList.html
+++ b/restaurant/src/main/resources/templates/cook/servingTaskList.html
@@ -115,7 +115,7 @@
                     title: 'Count',
                     align: 'center',
                     cellMinWidth: 100,
-                    templet: '<div><span style="color: #FF5722">{{d.count}}份</span></div>'
+                    templet: '<div><span style="color: #FF5722">{{d.count}}</span></div>'
                 }
                 , {
                     field: 'goodsCategory',
