--- a/restaurant/src/main/resources/static/layuiadmin/style/admin.css
+++ b/restaurant/src/main/resources/static/layuiadmin/style/admin.css
@@ -377,7 +377,7 @@ html {
 }
 
 .layadmin-side-shrink .layui-side-menu .layui-nav > .layui-nav-itemed > a {
-    background: rgba(0, 0, 0, .3)
+    background: rgba(0, 0, 0, 0.3)
 }
 
 .layadmin-side-spread-sm .layadmin-pagetabs, .layadmin-side-spread-sm .layui-layout-admin .layui-body, .layadmin-side-spread-sm .layui-layout-admin .layui-footer, .layadmin-side-spread-sm .layui-layout-admin .layui-layout-left {
