--- a/restaurant/src/main/resources/templates/counter/counter.html
+++ b/restaurant/src/main/resources/templates/counter/counter.html
@@ -372,9 +372,8 @@
                     <b class="orderCode"></b>
                 </div>
                 <div class="float-left right-item">
-                    <b>Table No. :</b>
+                    <b>Table No:&nbsp</b>
                     <b class="deskCode"></b>
-                    <b>XX</b>
                 </div>
             </div>
             <div class="nav-item-item2">
