--- a/restaurant/src/main/resources/templates/member/add.html
+++ b/restaurant/src/main/resources/templates/member/add.html
@@ -48,8 +48,8 @@
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
                         <label class="layui-form-label">Sex</label>
                         <div class="layui-input-block">
-                            <input type="radio" name="gender" value="male" title="male">
-                            <input type="radio" name="gender" value="female" title="female" checked>
+                            <input type="radio" name="gender" value="M" title="male">
+                            <input type="radio" name="gender" value="F" title="female" checked>
                         </div>
                     </div>
                 </div>
