--- a/restaurant/src/main/resources/templates/user/addUser.html
+++ b/restaurant/src/main/resources/templates/user/addUser.html
@@ -45,8 +45,8 @@
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
                         <label class="layui-form-label">Sex</label>
                         <div class="layui-input-block">
-                            <input type="radio" name="gender" value="Male" title="Male">
-                            <input type="radio" name="gender" value="Female" title="Female" checked>
+                            <input type="radio" name="gender" value="M" title="Male">
+                            <input type="radio" name="gender" value="F" title="Female" checked>
                         </div>
                     </div>
                 </div>
