--- a/restaurant/src/main/resources/templates/user/userInfo.html
+++ b/restaurant/src/main/resources/templates/user/userInfo.html
@@ -32,13 +32,13 @@
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
                         <label class="layui-form-label">Sex</label>
                         <div class="layui-input-block">
-                            <th:block th:if="${currentUser.gender}=='Male'">
-                                <input type="radio" name="gender" value="Male" title="Male" checked>
-                                <input type="radio" name="gender" value="Female" title="Female">
+                            <th:block th:if="${currentUser.gender}=='M'">
+                                <input type="radio" name="gender" value="M" title="Male" checked>
+                                <input type="radio" name="gender" value="F" title="Female">
                             </th:block>
-                            <th:block th:if="${currentUser.gender}=='Female'">
-                                <input type="radio" name="gender" value="Male" title="Male">
-                                <input type="radio" name="gender" value="Female" title="Female" checked>
+                            <th:block th:if="${currentUser.gender}=='F'">
+                                <input type="radio" name="gender" value="M" title="Male">
+                                <input type="radio" name="gender" value="F" title="Female" checked>
                             </th:block>
                         </div>
                     </div>
