--- a/restaurant/src/main/resources/templates/user/userList.html
+++ b/restaurant/src/main/resources/templates/user/userList.html
@@ -45,8 +45,8 @@
                         <div class="layui-input-block" style="margin-left:50px;">
                             <select name="gender">
                                 <option value="">No limit</option>
-                                <option value="Male">Male</option>
-                                <option value="Female">Female</option>
+                                <option value="M">Male</option>
+                                <option value="F">Female</option>
                             </select>
                         </div>
                     </div>
