fix amount display bug

--- a/restaurant/src/main/resources/templates/sold/transactionRecordsList.html
+++ b/restaurant/src/main/resources/templates/sold/transactionRecordsList.html
@@ -124,7 +124,7 @@
             {{#
             if(d.actualPay!=null){
             }}
-            <div>{{d.actualPay}}None</div>
+            <div>${{d.actualPay}}</div>
             {{#
             }else{
             }}
